--- a/app/build.gradle
+++ b/app/build.gradle
@@ -51,12 +51,16 @@ dependencies {
     implementation 'androidx.core:core-ktx:1.8.0'
     implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.5.0'
     implementation 'androidx.activity:activity-compose:1.5.0'
+    // required by viewModel() composable
+    implementation 'androidx.lifecycle:lifecycle-viewmodel-compose:2.5.0'
 
     def compose_version = '1.3.0-alpha01'
     implementation "androidx.compose.ui:ui:$compose_version"
     implementation "androidx.compose.material:material:$compose_version"
     implementation "androidx.compose.ui:ui-tooling-preview:$compose_version"
     debugImplementation "androidx.compose.ui:ui-tooling:$compose_version"
-
+    // required by LiveData.observeAsState()
+    implementation "androidx.compose.runtime:runtime-livedata:$compose_version"
+    
     implementation "com.google.accompanist:accompanist-systemuicontroller:0.24.2-alpha"
 }
