Initial channel experiment

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,7 +18,11 @@
         </activity>
 
         <activity android:name=".ui.livedata.LiveDataActivity" />
+
         <activity android:name=".ui.flow.FlowActivity" />
+
+        <activity android:name=".ui.channel.ChannelActivity" />
+
         <activity
             android:name=".ui.common.TransparentActivity"
             android:theme="@android:style/Theme.Translucent.NoTitleBar"
