--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,12 +4,12 @@ plugins {
 }
 
 android {
-    compileSdk 32
+    compileSdk 33
 
     defaultConfig {
         applicationId "vtsen.hashnode.dev.asyncflowdemo"
         minSdk 21
-        targetSdk 32
+        targetSdk 33
         versionCode 1
         versionName "1.0"
 
@@ -48,13 +48,13 @@ android {
 
 dependencies {
 
-    implementation 'androidx.core:core-ktx:1.8.0'
-    implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.5.0'
-    implementation 'androidx.activity:activity-compose:1.5.0'
+    implementation 'androidx.core:core-ktx:1.9.0'
+    implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.5.1'
+    implementation 'androidx.activity:activity-compose:1.6.0'
     // required by viewModel() composable
-    implementation 'androidx.lifecycle:lifecycle-viewmodel-compose:2.5.0'
+    implementation 'androidx.lifecycle:lifecycle-viewmodel-compose:2.5.1'
 
-    def compose_version = '1.3.0-alpha01'
+    def compose_version = '1.3.0-beta03'
     implementation "androidx.compose.ui:ui:$compose_version"
     implementation "androidx.compose.material:material:$compose_version"
     implementation "androidx.compose.ui:ui-tooling-preview:$compose_version"
@@ -62,5 +62,5 @@ dependencies {
     // required by LiveData.observeAsState()
     implementation "androidx.compose.runtime:runtime-livedata:$compose_version"
     
-    implementation "com.google.accompanist:accompanist-systemuicontroller:0.24.2-alpha"
+    implementation "com.google.accompanist:accompanist-systemuicontroller:0.24.10-beta"
 }
