--- a/app/build.gradle
+++ b/app/build.gradle
@@ -49,7 +49,7 @@ android {
 dependencies {
 
     implementation 'androidx.core:core-ktx:1.9.0'
-    implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.5.1'
+    implementation 'androidx.lifecycle:lifecycle-runtime-compose:2.6.0-alpha02'
     implementation 'androidx.activity:activity-compose:1.6.0'
     // required by viewModel() composable
     implementation 'androidx.lifecycle:lifecycle-viewmodel-compose:2.5.1'
