--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,7 +36,7 @@ android {
         compose true
     }
     composeOptions {
-        kotlinCompilerExtensionVersion '1.2.0'
+        kotlinCompilerExtensionVersion '1.4.3'
     }
     packagingOptions {
         resources {
@@ -49,12 +49,12 @@ android {
 dependencies {
 
     implementation 'androidx.core:core-ktx:1.9.0'
-    implementation 'androidx.lifecycle:lifecycle-runtime-compose:2.6.0-alpha02'
-    implementation 'androidx.activity:activity-compose:1.6.0'
+    implementation 'androidx.lifecycle:lifecycle-runtime-compose:2.6.1'
+    implementation 'androidx.activity:activity-compose:1.7.0'
     // required by viewModel() composable
-    implementation 'androidx.lifecycle:lifecycle-viewmodel-compose:2.5.1'
+    implementation 'androidx.lifecycle:lifecycle-viewmodel-compose:2.6.1'
 
-    def compose_version = '1.3.0-beta03'
+    def compose_version = '1.4.0'
     implementation "androidx.compose.ui:ui:$compose_version"
     implementation "androidx.compose.material:material:$compose_version"
     implementation "androidx.compose.ui:ui-tooling-preview:$compose_version"
@@ -62,5 +62,5 @@ dependencies {
     // required by LiveData.observeAsState()
     implementation "androidx.compose.runtime:runtime-livedata:$compose_version"
     
-    implementation "com.google.accompanist:accompanist-systemuicontroller:0.24.10-beta"
+    implementation "com.google.accompanist:accompanist-systemuicontroller:0.28.0"
 }
